project clean up

--- a/application.properties
+++ b/application.properties
@@ -1,9 +1,10 @@
 signUpUrl=https://www.credify.tech/phone/nonDMFunnel
 loanPageUrl=https://www.credify.tech/portal/login
 loanAmount=2000
+formattedLoanAmount=2,000
 productTypeEndpoint=https://credapi.credify.tech
 loginUrl=api/brportorch/v2/login
-apiLogin=coding.challenge.login@upgrade.com
-apiPassword=On$3XcgsW#9q
+apiLogin=candidates+2585@upgrade-challenge.com
+apiPassword=2yPc16a3
 
 
